--- a/las_editor.html
+++ b/las_editor.html
@@ -96,19 +96,7 @@
             </figure>
             <p>
                 Nikita Willeford Kastrinos is a graduate student and predoctoral 
-                instructor at the University of Washington. She works on nineteenth-century 
-                British literature with a focus on Victorian print culture and book history. 
-                She is especially focused on the periodical and other popular publications, 
-                the serialized novel, authorship, reading practices, reception, and circulation. 
-                Her Master’s thesis, provisionally titled, 
-                “‘I saw his form pass by—appealing—significant—under a cloud’: Form(s) of Indeterminacy in <i>Lord Jim</i>,” 
-                investigates the ways in which <i>Lord Jim</i> disrupts the gradualist characteristics of 
-                nineteenth-century science, history, and literature as epitomized in the installment novel. 
-                Looking to <i>Lord Jim</i> as it first appeared as <i>Lord Jim: A Sketch</i> in <i>Blackwood’s Magazine</i>, 
-                she reads its anachronistic and asynchronous movements in time and interpret its 
-                establishment of a new form of causation, laying out a method of narrative 
-                analysis which challenges the teleology of the serial novel and offers a 
-                new sense of the form’s true heterogeneity.
+                instructor at the University of Washington.
             </p>
         </article>
     </section>
