--- a/issue_4.html
+++ b/issue_4.html
@@ -145,7 +145,7 @@
             </div>
             <hr style="height:10px; border-width:0; color:#8c9380; background-color:#8c9380;"/>
             <footer>
-                Nikita Willeford Kastrinos &copy; December 15th, 2020
+                Nikita Willeford Kastrinos &copy; 2024
             </footer>
 
             <script type="text/javascript">
