--- a/las_editor.html
+++ b/las_editor.html
@@ -95,8 +95,16 @@
                 <figcaption id="editor">Nikita Willeford Kastrinos</figcaption>
             </figure>
             <p>
-                Nikita Willeford Kastrinos is a graduate student and predoctoral 
-                instructor at the University of Washington.
+                Nikita Willeford Kastrinos is a Ph.D. Candidate in the Department of English at the 
+                University of Washington, Seattle where she studies 18th- and 19th-century British 
+                literature and book history. Her research interests include the environmental humanities, 
+                media and material cultural studies, and the digital humanities. She serves as the site 
+                designer for the <a href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
+                and is currently a Research Associate in Program Development and Outreach for the 
+                <a href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. She has written on 
+                <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
+                as well as collaborated on data-driven literary-historical research, 
+                including <a href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
             </p>
         </article>
     </section>
