--- a/las_reviews.html
+++ b/las_reviews.html
@@ -181,7 +181,7 @@ body {
     <br />
     <hr style="height:10px; border-width:0; color:#8c9380; background-color:#8c9380;"/>
     <footer>
-        Nikita Willeford Kastrinos &copy; December 15th, 2020
+        Nikita Willeford Kastrinos &copy; 2024
     </footer>
 </body>
 </html>
