--- a/las_smith.html
+++ b/las_smith.html
@@ -196,7 +196,7 @@
     <br />
     <hr style="height:10px; border-width:0; color:#8c9380; background-color:#8c9380;"/>
     <footer>
-        Nikita Willeford Kastrinos &copy; December 15th, 2020
+        Nikita Willeford Kastrinos &copy; 2024
     </footer>
 </body>
 </html>
