--- a/las_editor.html
+++ b/las_editor.html
@@ -96,15 +96,32 @@
             </figure>
             <p>
                 Nikita Willeford Kastrinos is a Ph.D. Candidate in the Department of English at the 
-                University of Washington, Seattle where she studies 18th- and 19th-century British 
-                literature and book history. Her research interests include the environmental humanities, 
-                media and material cultural studies, and the digital humanities. She serves as the site 
-                designer for the <a href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
+                University of Washington, Seattle where she researches and teaches 18th- and 19th-century British 
+                literature and book history. Her interests include the environmental humanities, 
+                media and material cultural studies, and the digital humanities. 
+            </p>    
+            <p>Her dissertation, <i>Of Form(es) and Form(ats): Ecologies of the Eighteenth- and Nineteenth-Century Novel</i>, 
+                works at the intersection of literary analysis, book history, and the environmental humanities to ask questions 
+                about the relationship between aesthetic form and the natural world. Through discussions of works by 
+                Samuel Richardson, Jane Austen, Bram Stoker, and Joseph Conrad, she investigates the way the period’s 
+                literary artifacts reveal their ecological embedding through two registers—literary form and material 
+                format (i.e., the book as a bundle of paper, glue, ink). Inquiring into the relationship between these 
+                two entities, she pays attention to the formal agencies of the period’s ecomedia, proposing a new methodology 
+                for examining the interventions of the natural world in the aesthetic structures organizing literary objects. 
+                Following the development of the British novel, her chapters offer a transhistorical perspective of novelistic 
+                development as it coincides with the shift from pre- to post-industrialized print and the rise of extraction 
+                capitalism, ultimately, laying the groundwork for a nascent field of the environmental humanities called 
+                the environmental history of the book.
+            </p>    
+            <p>   
+                Nikita Willeford Kastrinos serves as the site designer for the 
+                <a href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
                 and is currently a Research Associate in Program Development and Outreach for the 
-                <a href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. She has written on 
+                <a href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
+                She has written on 
                 <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
-                as well as collaborated on data-driven literary-historical research, 
-                including <a href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
+                as well as collaborated on data-driven literary-historical research, including 
+                <a href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
             </p>
         </article>
     </section>
