--- a/las_editor.html
+++ b/las_editor.html
@@ -115,13 +115,13 @@
             </p>    
             <p>   
                 Nikita Willeford Kastrinos serves as the site designer for the 
-                <a href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
+                <a href="https://humanitiesdatalab.ds.lib.uw.edu/" class="editor" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
                 and is currently a Research Associate in Program Development and Outreach for the 
-                <a href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
+                <a href="https://txtds.uw.edu/" class="editor" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
                 She has written on 
-                <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
+                <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" class="editor" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
                 as well as collaborated on data-driven literary-historical research, including 
-                <a href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
+                <a href="https://www.scottishwomenwritersontheweb.net/" class="editor" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
             </p>
         </article>
     </section>
