--- a/las_editor.html
+++ b/las_editor.html
@@ -123,7 +123,7 @@
                 She has written on 
                 <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" class="editor" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
                 as well as collaborated on data-driven literary-historical research, including 
-                <a href="https://www.scottishwomenwritersontheweb.net/" class="editor" target="_blank" rel="noopener noreferrer">Scottish Women Writers on the Web</a>. 
+                <a href="https://www.scottishwomenwritersontheweb.net/" class="editor" target="_blank" rel="noopener noreferrer"><i>Scottish Women Writers on the Web</i></a>. 
             </p>
         </article>
     </section>
