--- a/las_workscited.html
+++ b/las_workscited.html
@@ -202,7 +202,7 @@
                 </p>
             </div>
             <h2>Image Sources</h2>
-            <p>All images used are in the public domain and have been sourced from <i>Wikimedia Commons</i> except for the reproduction of material from the <i>London Journal</i> which has been sourced from <i>ProQuest</i>.</p>
+            <p>All images used are in the public domain and have been sourced from <i>Wikimedia Commons</i> except for the reproduction of material from the <i>London Journal</i>, which has been sourced from <i>HathiTrust</i>.</p>
         </article>
     </section>
     <br />
