--- a/las_editor.html
+++ b/las_editor.html
@@ -100,7 +100,7 @@
                 literature and book history. Her interests include the environmental humanities, 
                 media and material cultural studies, and the digital humanities. 
             </p>
-            </ br>
+            <br />
             <p>Her dissertation, <i>Of Form(es) and Form(ats): Ecologies of the Eighteenth- and Nineteenth-Century Novel</i>, 
                 works at the intersection of literary analysis, book history, and the environmental humanities to ask questions 
                 about the relationship between aesthetic form and the natural world. Through discussions of works by 
@@ -114,16 +114,16 @@
                 capitalism, ultimately, laying the groundwork for a nascent field of the environmental humanities called 
                 the environmental history of the book.
             </p> 
-            </ br>
+            <br />
             <p>   
                 Nikita Willeford Kastrinos serves as the site designer for the 
-                <a href="https://humanitiesdatalab.ds.lib.uw.edu/" class="editor" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
+                <a id="editor" href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
                 and is currently a Research Associate in Program Development and Outreach for the 
-                <a href="https://txtds.uw.edu/" class="editor" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
+                <a id="editor" href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
                 She has written on 
-                <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" class="editor" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
+                <a id="editor" href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
                 as well as collaborated on data-driven literary-historical research, including 
-                <a href="https://www.scottishwomenwritersontheweb.net/" class="editor" target="_blank" rel="noopener noreferrer"><i>Scottish Women Writers on the Web</i></a>. 
+                <a id="editor" href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer"><i>Scottish Women Writers on the Web</i></a>. 
             </p>
         </article>
     </section>
