--- a/las_editor.html
+++ b/las_editor.html
@@ -94,14 +94,14 @@
                 <br />
                 <figcaption id="editor">Nikita Willeford Kastrinos</figcaption>
             </figure>
-            <p>
+            <p class="editor">
                 Nikita Willeford Kastrinos is a Ph.D. Candidate in the Department of English at the 
                 University of Washington, Seattle where she researches and teaches 18th- and 19th-century British 
                 literature and book history. Her interests include the environmental humanities, 
                 media and material cultural studies, and the digital humanities. 
             </p>
             <br />
-            <p>Her dissertation, <i>Of Form(es) and Form(ats): Ecologies of the Eighteenth- and Nineteenth-Century Novel</i>, 
+            <p class="editor">Her dissertation, <i>Of Form(es) and Form(ats): Ecologies of the Eighteenth- and Nineteenth-Century Novel</i>, 
                 works at the intersection of literary analysis, book history, and the environmental humanities to ask questions 
                 about the relationship between aesthetic form and the natural world. Through discussions of works by 
                 Samuel Richardson, Jane Austen, Bram Stoker, and Joseph Conrad, she investigates the way the period’s 
@@ -115,15 +115,15 @@
                 the environmental history of the book.
             </p> 
             <br />
-            <p>   
+            <p class="editor">   
                 Nikita Willeford Kastrinos serves as the site designer for the 
-                <a id="editor" href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
+                <a href="https://humanitiesdatalab.ds.lib.uw.edu/" target="_blank" rel="noopener noreferrer">UW Humanities Data Lab</a> 
                 and is currently a Research Associate in Program Development and Outreach for the 
-                <a id="editor" href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
+                <a href="https://txtds.uw.edu/" target="_blank" rel="noopener noreferrer">UW Textual Studies Program</a>. 
                 She has written on 
-                <a id="editor" href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
+                <a href="https://doi-org.offcampus.lib.washington.edu/10.5325/georelioghlstud.73.2.0078" target="_blank" rel="noopener noreferrer">digital methods for collaborative reading</a>, 
                 as well as collaborated on data-driven literary-historical research, including 
-                <a id="editor" href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer"><i>Scottish Women Writers on the Web</i></a>. 
+                <a href="https://www.scottishwomenwritersontheweb.net/" target="_blank" rel="noopener noreferrer"><i>Scottish Women Writers on the Web</i></a>. 
             </p>
         </article>
     </section>
